# manga-image-translator

./: .gitignore  REMOTE-SETUP.md  SHIORI-SETUP.md  install-autostart.bat  list-gemini-models.bat  requirements.txt  run-aux-node.bat  run-remote-server.bat  run-tunnel.bat  start-translator.bat  stop-translator.bat  uninstall-autostart.bat
manga_translator/: config.py  manga_translator.py
manga_translator/detection/: __init__.py  default.py  oneocr.py
manga_translator/inpainting/: inpainting_lama_mpe.py
manga_translator/mask_refinement/: __init__.py  text_mask_utils.py
manga_translator/mode/: share.py
manga_translator/ocr/: __init__.py  colors.py  common.py  model_32px.py  model_48px.py  model_48px_ctc.py  model_48px_exp.py  model_manga_ocr.py  model_manga_ocr_fast.py  model_manga_ocr_tflite.py  model_oneocr.py
manga_translator/rendering/: __init__.py  bubble_seg.py  shiori_render.py  shiori_style.py  text_render.py  text_render_eng.py
manga_translator/textline_merge/: __init__.py
manga_translator/translators/: common_gpt.py  config_gpt.py  deepseek.py  gemini.py  qwen2.py
manga_translator/utils/: executors.py  inference.py  oneocr.py  profiling.py  textblock.py
server/: args.py  aux_agent.py  aux_pool.py  dashboard.html  edge.py  gallery_jobs.py  instance.py  main.py  myqueue.py  request_extraction.py  safe_pickle.py  sent_data_internal.py  stats.py
shiori-renderer/: Cargo.toml  pyproject.toml
shiori-renderer/src/: core_types.rs  driver.rs  lib.rs
test/: test_aux_pool.py  test_gallery_queue_isolation.py  test_ocr_colors.py
