[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "shiori-renderer"
version = "0.1.0"
description = "Python bindings around the vendored koharu-renderer (GPL-3.0)"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }

[tool.maturin]
module-name = "shiori_renderer"
